--- a/XTS/demo/README
+++ b/XTS/demo/README
@@ -1,5 +1,3 @@
-
-
 # JBoss, Home of Professional Open Source.
 # Copyright (c) 2011, Red Hat, Inc., and individual contributors
 # as indicated by the @author tags. See the copyright.txt file in the
@@ -22,26 +20,21 @@
 
 
 
-This demo has been written for, and tested on, JBoss 7.0.2. It may work with other versions of JBoss 7.
+This demo has been written for, and tested on, JBoss 7.1.1.Final It may work with other versions of JBoss 7.
 Please download and install this app server from the JBoss website.
 
-ensure JBoss AS is started with XTS enabled. This can be done by specifying the standalone-xts configuration when starting JBoss AS:
-
-cd $JBOSS_HOME
-sh bin/standalone.sh -server-config=standalone-xts.xml -Djava.awt.headless=false
 
 Note: The java.awt.headless property is needed for the demo as it starts a Java Swing user interface for each or the participant services. This is done for demonstration purposes; it is unlikely that a typical JEE application will ever do this. 
 
 
 Follow these steps to build the demo for JBoss
- - edit jboss.properties and replace variables as directed in the comments
- - add java and ant to your path
- - set environment variable JBOSS_HOME to point to the root directory of an
-   instance of JBoss 7
- - execute 'sh build.sh jboss clean deploy' on unix or
-   'build.bat jboss clean deploy' on windows
-
-Open a browser and enter the xts-demo url (e.g. http://localhost:8080/xts-demo)
+ - add java and Maven to your path
+ - ensure JBoss AS is started with XTS enabled. This can be done by specifying the standalone-xts configuration when starting JBoss AS:
+    cd $JBOSS_HOME
+    ./bin/standalone.sh -c ../../docs/examples/configs/standalone-xts.xml -Djava.awt.headless=false
+ - execute 'mvn clean install' (runs tests)
+ - mvn -f ear/pom.xml jboss-as:deploy (deploys the demo)
+ - Open a browser and enter the xts-demo url (e.g. http://localhost:8080/xts-demo)
 
 ---------  Basic test coverage for JBossTS XTS Demo App
 Author: Ivo Studensky <istudens@redhat.com>
@@ -52,36 +45,6 @@ and its Drone extension. By default it calls a local Firefox browser to execute 
 The test starts up the AS, deploys the XTS Demo App into it and runs a reservation of some
 restaurant/theatre/taxi seats using both AtomicTransaction and BusinessActivity tx type.
 
-
---- Requirements:
-1. apache maven tool
-2. xts demo built in /XTS/xts-install/demo dir
-
-
---- Steps to run:
-
-1. export JBOSS_HOME=<path to JBossAS >= 7.1.0.Alpha2-SNAPSHOT>
-2. mvn clean test
-This is the raw demo source directory for the XTS demo program
-(XTS/demo). Do not attempt to build the demo from this directory as it
-will not work.
-
-Run the command 'ant clean install' in the parent directory (XTS).
-This will:
-
-  - create the xts install directory (XTS/xts-install)
-
-  - build and install the XTS libraries, web apps and config files and
-
-  - install a preprocessed version of the demo source tree ready for
-    building
-
-To build the demo change to the demo directory in the xts install tree
-(XTS/xts-install/demo) and follow the instructions in file BUILDING.
-
-Read the installed html documentation (XTS/xts-install/demo/html) for
+Read the programmers guide (XTS/xts-install/docs/ProgrammersGuide.pdf) for
 an explanation of how the demo works and guidelines on how to use the
 XTS package to implement your own transactional web services.
-
-Read the programmers guide (XTS/xts-install/docs/ProgrammersGuide.pdf)
-for further information.
