--- a/blacktie/xatmi/fooapp/README
+++ b/blacktie/xatmi/fooapp/README
@@ -33,7 +33,7 @@ C:\Program Files\Microsoft Visual Studio 9.0\VC\vcvarsall.bat
 
 
 2. CREATE THE SERVER
-generate_server -Dservice.names=FOOAPP -Dserver.includes=BarService.c
+generate_server -Dserver.name=FOOAPP -Dserver.includes=BarService.c
 NOTE: If you get the following error you have not installed ant-contrib into your ANT distribution:
 	BUILD FAILED
 	/home/tom/blacktie/dist/blacktie-5.0.0.M2-SNAPSHOT/bin/generate-executables.xml:160: Problem: failed to create task or type propertycopy
@@ -43,7 +43,7 @@ NOTE: If you get the following error you have not installed cpp-tasks into your 
 	/home/tom/blacktie/dist/blacktie-5.0.0.M2-SNAPSHOT/bin/generate-executables.xml:140: Problem: failed to create task or type cc
 NOTE: If you get the following error you have not edited or executed setenv correctly:
 java org.apache.tools.ant.launch.Launcher -f /bin/generate-executables.xml -Dconfiguration.type
-=debug -Dbasedir=. server -Dservice.names=FOOAPP -Dserver.includes=BarService.c
+=debug -Dbasedir=. server -Dserver.name=FOOAPP -Dserver.includes=BarService.c
 Exception in thread "main" java.lang.NoClassDefFoundError: org/apache/tools/ant/launch/Launcher
 Caused by: java.lang.ClassNotFoundException: org.apache.tools.ant.launch.Launcher
         at java.net.URLClassLoader$1.run(URLClassLoader.java:200)
