--- a/blacktie/xatmi/mappedNames/README
+++ b/blacktie/xatmi/mappedNames/README
@@ -66,9 +66,8 @@ C:\blacktie\dist\blacktie-5.2.9.Final-SNAPSHOT\bin\generate-executables.xml:144:
 generate_client -Dclient.includes=client.c
 
 
-4. DEPLOY THE BLACKTIE ADMIN SERVICE
-Undeploy any older versions of the blacktie admin service
-Copy the file $BLACKTIE_HOME/blacktie-admin-services/blacktie-admin-services-<VERSION>.ear into $JBOSS_HOME/standalone/deployments
+4. INSTALL THE BLACKTIE SUBSYSTEM AND DEPLOY THE ADMIN SERVICE
+Follow the instructions in $BLACKTIE_HOME/README
 
 
 5. RUN THE APPLICATION SERVER
