--- a/blacktie/xatmi/svrInitDoneFunctions/README
+++ b/blacktie/xatmi/svrInitDoneFunctions/README
@@ -61,9 +61,8 @@ C:\blacktie\dist\blacktie-5.2.9.Final-SNAPSHOT\bin\generate-executables.xml:144:
 \blacktie\dist\blacktie-5.2.9.Final-SNAPSHOT\quickstarts\xatmi\fooapp\target\classes"): CreateProcess error=2, The system cannot find the file specified
 
 
-3. DEPLOY THE BLACKTIE ADMIN SERVICE
-Undeploy any older versions of the blacktie admin service
-Copy the file $BLACKTIE_HOME/blacktie-admin-services/blacktie-admin-services-<VERSION>.ear into $JBOSS_HOME/standalone/deployments
+3. INSTALL THE BLACKTIE SUBSYSTEM AND DEPLOY THE ADMIN SERVICE
+Follow the instructions in $BLACKTIE_HOME/README
 
 
 4. RUN THE APPLICATION SERVER
