--- a/blacktie/xatmi/txfooapp/README
+++ b/blacktie/xatmi/txfooapp/README
@@ -203,8 +203,7 @@ C:\blacktie\dist\blacktie-5.2.9.Final-SNAPSHOT\bin\generate-executables.xml:144:
 
 3. RUNNING THE EXAMPLE
 ======================
-Undeploy any older versions of the blacktie admin service
-Copy the file $BLACKTIE_HOME/blacktie-admin-services/blacktie-admin-services-<VERSION>.ear into $JBOSS_HOME/standalone/deployments
+Follow the instructions in $BLACKTIE_HOME/README
 Start the JBoss server
 <JBOSS_HOME>/bin/standalone.sh|bat -c standalone-blacktie.xml -Djboss.bind.address=$JBOSSAS_IP_ADDR -Djboss.bind.address.unsecure=$JBOSSAS_IP_ADDR
 
