--- a/rts/lra/README.adoc
+++ b/rts/lra/README.adoc
@@ -23,13 +23,13 @@ For simplicity the trip, hotel and flight services all run in the same JVM and a
 Start the coordinator:
 
 ```bash
-java -jar target/lra-test/WEB-INF/lib/lra-coordinator-5.6.5.Final-SNAPSHOT-swarm.jar -Dswarm.http.port=8080
+java -jar $NARAYANA_INSTALL_LOCATION/rts/lra/lra-coordinator-swarm.jar
 ```
 
 Start the trip, hotel and flight services:
 
 ```bash
-mvn wildfly-swarm:run -DskipTests -Dswarm.http.port=8081 -Dlra.http.port=8080
+java -jar target/lra-test-swarm.jar -Dswarm.http.port=8081 -Dlra.http.port=8080
 ```
 
 The system property *lra.http.port* specifies the port on which the LRA coordinator is listening.
@@ -55,3 +55,44 @@ curl -X POST  "http://localhost:8081/trip/book?hotelName=Rex"
 curl -X POST  "http://localhost:8081/trip/book?flightNumber=BA123"
 ```
 
+## Running the demo on Minishift
+
+You will need to have installed Minishift and have the tools in your command line.
+
+We provisioned Minishift as:
+```bash
+minishift start
+```
+
+Once you have the Minishift environment available the following steps (assuming you have the Narayana distribution unzipped to NARAYANA_INSTALL_LOCATION
+```bash
+oc new-project lra-minishift
+
+# Deploy the LRA coordinator
+cd lra-coordinator && mkdir target
+oc new-build --binary --name=lra-coordinator -l app=lra-coordinator
+cp $NARAYANA_INSTALL_LOCATION/rts/lra/lra-coordinator-swarm.jar target/lra-coordinator-swarm.jar
+oc start-build lra-coordinator --from-dir=. --follow
+oc new-app lra-coordinator -l app=lra-coordinator
+oc expose service lra-coordinator
+cd ..
+
+# Deploy the Trip controller
+oc new-build --binary --name=trip-service -l app=trip-service
+mvn clean package
+oc start-build trip-service --from-dir=. --follow
+oc new-app trip-service -l app=trip-service
+oc expose service trip-service
+```
+
+You can then run the client as above:
+
+```bash
+java -cp "target/classes;target/lra-test/WEB-INF/lib/*" -Dservice.http.host="trip-service-lra-minishift.`minishift ip`.nip.io" -Dservice.http.port=80 TripClient
+```
+
+To check the logs you can look at:
+```bash
+oc logs -f `oc get pods | grep ^trip-service | grep Running | awk '{ print $1 }'`
+oc logs -f `oc get pods | grep ^lra-coordinator | grep Running | awk '{ print $1 }'`
+```
