JBTM-2889 STM with Vert.x example

--- a/STM/vertx/README.adoc
+++ b/STM/vertx/README.adoc
@@ -1,180 +1,1 @@
-OVERVIEW
---------
-
-Another example of STM and Vert.x integration. The quickstart is divided into 3 parts each introducing
-a different facet of STM and Vert.x integration.
-
-Use Case 1 shows a single JVM running multiple vertx instances sharing the same volatile STM object.
-
-Use Case 2 uses the same STM object but makes it persistent and shows how to share it across address
-spaces.
-
-These two examples illustrate the different ways in which an application can be scaled whilst
-maintaining data consistency:
-
- - verticle scaling by using better hardware so that more threads can do be used to service the
-   workload;
- - horizontal scaling by using more servers so that the workload can be distributed to multiple JVMs
-
-Use case 3 shows a single JVM hosting multiple STM objects and a Trip verticle which listens for
-trip, theatre and taxi booking requests. STM is used manage concurrent access to the various STM
-objects.
-
-Use case 4 is an optional final stress test to check that STM correctly manages concurrent access
-to STM objects.
-
-First build a fat jar that contains all the classes needed to run both demos in a single jar:
-
-  mvn clean package
-
-Use Case 1: Scaling by adding more threads
-==========================================
-
-Characteristics:
-
-  - RECOVERABLE and EXCLUSIVE
-  - creates multiple vertx instances each instance using a handle to the same STM object
-  
-What it's good for:
-
-  - vertical scaling where adding better h/w is an option in order to support more threads in one JVM
-
-Features:
-
-This example shows a Theatre booking service:
-   - an STM object is used to maintain all Theatre bookings
-     * the STM object is volatile
-   - multiple vertx instances each listening on the same HTTP endpoint
-   - each vertx instance shares the same STM object
-   - all vertx instances run in the same address space
-     * concurrency is managed by the STM runtime
-   - shows vertical scaling
-
-Usage:
-------
-
-  mvn exec:java -Pdemo1
-
-or
-
-  java -cp target/stm-vertx-demo-5.6.0.Final-SNAPSHOT-fat.jar demo.demo12.VolatileTheatreVerticle 
-
-This command starts the 10 instances of the theatre verticle which all listen for requests/messages on
-HTTP port 8080. The port and number of instances are configurable. If run the example directly from the
-java command line notice that the version of the jar (5.6.0.Final-SNAPSHOT in this example) will change
-depending upon which narayana release you have.
-
-Create 2 bookings:
-
-  curl -X POST http://localhost:8080/api/theatre/Apollo
-  curl -X POST http://localhost:8080/api/theatre/Savoy
-
-observe how each request is serviced on a different verticle instance
-
-Similarly performing GETs will show the same booking counts regardless of which verticle services it:
-
-  curl -X GET http://localhost:8080/api/theatre 
-  curl -X GET http://localhost:8080/api/theatre 
-
-Use Case 2: Scaling by distributing the workload across JVMs
-==========================================
-
-Similar to use case 1 but uses persistent STM objects spread across different JVMs.
-
-Characteristics:
-
-  - PERSISTENT and SHARED
-  - theatre service verticles running in different JVMs sharing the same STM object
-  - each JVM hosting multiple vertx instances each instance using a handle to the same STM object
-
-What it's good for:
-
-  - horizontal scaling by using better hardware so that more threads can do be used to service the
-    workload;
-
-Usage:
-------
-
-  mvn exec:java -Pdemo2
-
-or
-
-  java -cp target/stm-vertx-demo-5.6.0.Final-SNAPSHOT-fat.jar demo.demo12.PersistentSharedTheatreVerticle
-
-
-Start a second verticle that will share the same STM object. In the output of the above command
-look for the line that reports the uid of the STM object, for example:
-
-> Theatre STM uid: 0:ffffac1182c6:9197:5912d4ff:1
-
-The actual uid may change from run to run. Pass this uid the second JVM using a java system property:
-
-  mvn exec:java -Pdemo2 -Duid=0:ffffac1182c6:9197:5912d4ff:1
-
-or
-
-  java -cp target/stm-vertx-demo-5.6.0.Final-SNAPSHOT-fat.jar demo.demo12.PersistentSharedTheatreVerticle 0:ffffac1182c6:9197:5912d4ff:1
-
-Create two bookings using services running in the two different JVMs (on endpoints 8080 and 8082
-respectively):
-
-  curl -X POST http://localhost:8080/api/theatre/Apollo
-  curl -X POST http://localhost:8082/api/theatre/Savoy
-
-Check that each JVM reports the correct number of bookings (namely 2):
-
-  curl -X GET http://localhost:8080/api/theatre
-  curl -X GET http://localhost:8082/api/theatre
-
-Use Case 3: Managing shared state across different STM objects
-===============================================
-
-Characteristics:
-  - RECOVERABLE and EXCLUSIVE
-  - trip service verticle (multiple instances) using STM objects to maintain theatre and taxi bookings.
-  - providing HTTP endpoints for making trip, theatre and taxi bookings.
-
-What it's good for:
-  - composing transactional operations across different STM objects 
-
-The trip service fulfils booking requests by updating shared STM objects representing the theatre and
-taxi booking services respectively.
-
-  mvn exec:java -Pdemo3
-
-or
-
-  java -cp target/stm-vertx-demo-5.6.0.Final-SNAPSHOT-fat.jar demo.demo3.TripSTMVerticle
-
-Make two trip bookings:
-
-  curl -X POST http://localhost:8080/api/trip/Savoy/ABC
-  curl -X POST http://localhost:8080/api/trip/Apollo/XYZ
-
-and a single theatre booking:
-
-  curl -X POST http://localhost:8080/api/theatre/Savoy
-
-observe that each booking is serviced by a different verticle. Check that number of theatre (3) and
-number of taxi (2) bookings are correct:
-
-  curl -X GET http://localhost:8080/api/theatre
-  curl -X GET http://localhost:8080/api/taxi
-
-Use Case 4: Stress Testing:
---------------------------
-
-None of the previous use cases demonstrate contention of the STM objects. This next case will start
-use case 1 (theatre booking example) and then make lots of concurrent trip bookings and validate that
-the expected number of bookings are made.
-
-Usage:
-------
-
-Start the theatre service in one window or in the background:
-
-  mvn exec:java -Pdemo1
-
-and now make lots of concurrent bookings:
-
-  mvn exec:java -Pstress
+This quickstart was never automated so has been replaced by [a better one in the narayana conferences repository](https://github.com/jbosstm/conferences/tree/master/mucon2017).
