--- a/rts/lra/README.adoc
+++ b/rts/lra/README.adoc
@@ -25,7 +25,7 @@ Obtain and unzip the Narayana distribution containing the LRA swarm coordinator 
 The trip, hotel and flight services all run in different JVMs and all listen on the different http ports.
 
 There are two coordinators ran in the example. You can simplify this to one coordinator by not running the
-second coordinator process and changing the lra.http.port of the flight-service. Running multiple coordinators
+second coordinator process and changing the *lra.coordinator.url* of the flight-service. Running multiple coordinators
 simulates how different trust domains can interoperate.
 
 Start the coordinators:
@@ -39,11 +39,11 @@ Start the trip, hotel and flight services:
 
 ```bash
 java -jar hotel-service/target/lra-test-swarm.jar -Dswarm.http.port=8082
-java -jar flight-service/target/lra-test-swarm.jar -Dswarm.http.port=8083 -Dlra.http.port=8081
-java -jar trip-controller/target/lra-test-swarm.jar -Dswarm.http.port=8084 -Dlra.http.port=8080
+java -jar flight-service/target/lra-test-swarm.jar -Dswarm.http.port=8083 -Dlra.coordinator.url="http://localhost:8081/lra-coordinator"
+java -jar trip-controller/target/lra-test-swarm.jar -Dswarm.http.port=8084 -Dlra.coordinator.url="http://localhost:8080/lra-coordinator"
 ```
 
-The system property *lra.http.port* specifies the port on which the LRA coordinator is listening.
+The system property *lra.coordinator.url* specifies the URL on which the LRA coordinator is listening.
 
 As you can see the flight service uses it's own coordinator to simulate a different domain
 participating in the same transaction.
@@ -59,7 +59,7 @@ Jackson for parsing Json the client (TripClient) only uses Java SE APIs.
 mvn -f trip-client/pom.xml exec:java -Dservice.http.host="localhost" -Dservice.http.port=8084
 ```
 
-The system properties *lra.http.port* and *service.http.port* specify the ports on which the LRA
+The system properties *lra.coordinator.url* and *service.http.port* specify the ports on which the LRA
 coordinator and example service are is listening, respectively.
 
 ## Running the demo on Minishift
